--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.11.5",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
