--- a/package.json
+++ b/package.json
@@ -13,19 +13,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/d3": "^7.4.3",
+    "@types/redux-persist": "^4.3.1",
     "antd": "^5.11.5",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "d3": "^7.8.5",
     "framer-motion": "^10.16.12",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.2.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.1.2",
     "@types/bootstrap": "^5.2.10",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-redux": "^7.1.32",
+    "@types/styled-components": "^5.1.34",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -33,7 +50,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "gh-pages": "^6.1.0",
-    "typescript": "^5.2.2",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.2",
     "vite": "^5.0.0"
   }
 }
