--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cdbreact": "^1.5.18",
     "d3": "^7.8.5",
     "framer-motion": "^10.16.12",
+    "howler": "^2.2.4",
     "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
     "@types/bootstrap": "^5.2.10",
+    "@types/howler": "^2.2.11",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
