--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/d3": "^7.4.3",
     "@types/redux-persist": "^4.3.1",
+    "animejs": "^3.2.2",
     "antd": "^5.11.5",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
+    "@types/animejs": "^3.1.12",
     "@types/bootstrap": "^5.2.10",
     "@types/howler": "^2.2.11",
     "@types/jest": "^29.5.11",
