--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/d3": "^7.4.3",
-    "@types/redux-persist": "^4.3.1",
     "animejs": "^3.2.2",
     "antd": "^5.11.5",
     "bootstrap": "^5.3.2",
