--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.19",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.0.1",
@@ -27,6 +30,8 @@
     "framer-motion": "^10.16.12",
     "howler": "^2.2.4",
     "immer": "^10.0.3",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.13.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -42,6 +47,8 @@
     "@types/bootstrap": "^5.2.10",
     "@types/howler": "^2.2.11",
     "@types/jest": "^29.5.11",
+    "@types/jquery": "^3.5.29",
+    "@types/jqueryui": "^1.12.21",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.32",
