--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "^5.11.5",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "clipboard-copy": "^4.0.1",
     "d3": "^7.8.5",
     "framer-motion": "^10.16.12",
     "howler": "^2.2.4",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sonner": "^1.2.4"
@@ -52,6 +54,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.32",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/styled-components": "^5.1.34",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
